--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nutrion-workout-app",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://almg-walsh.github.io/workout-app",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -33,6 +34,5 @@
     "gh-pages": "^6.3.0",
     "typescript": "^4.0.0",
     "vite": "^6.3.5"
-  },
-  "homepage": "https://<USERNAME>.github.io/<REPO_NAME>"
+  }
 }
